# Generated by Django 6.0.3 on 2026-04-11 23:19

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('cursos', '0007_clase_add_constraints_and_default'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Anuncio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('titulo', models.CharField(max_length=200)),
                ('contenido', models.TextField()),
                ('prioridad', models.CharField(choices=[('info', 'Informativo'), ('aviso', 'Aviso'), ('importante', 'Importante'), ('urgente', 'Urgente')], default='info', max_length=15)),
                ('publicado', models.BooleanField(default=False)),  # type: ignore[reportArgumentType]
                ('fecha_publicacion', models.DateTimeField(blank=True, null=True)),
                ('fecha_expiracion', models.DateTimeField(blank=True, null=True)),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('creado_por', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='anuncios_creados', to=settings.AUTH_USER_MODEL)),
                ('curso', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='anuncios', to='cursos.curso')),
            ],
            options={
                'verbose_name': 'Anuncio',
                'verbose_name_plural': 'Anuncios',
                'ordering': ['-fecha_creacion'],
            },
        ),
        migrations.CreateModel(
            name='LecturaAnuncio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_lectura', models.DateTimeField(auto_now_add=True)),
                ('anuncio', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='lecturas', to='anuncios.anuncio')),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='anuncios_leidos', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'unique_together': {('anuncio', 'usuario')},
            },
        ),
    ]
