# Generated by Django 6.0.3 on 2026-04-11 22:16

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('cursos', '0007_clase_add_constraints_and_default'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Tarea',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('titulo', models.CharField(max_length=200)),
                ('descripcion', models.TextField(blank=True, default='')),
                ('fecha_limite', models.DateTimeField(verbose_name='Fecha límite')),
                ('puntaje_maximo', models.IntegerField(default=100)),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('creado_por', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='tareas_creadas', to=settings.AUTH_USER_MODEL)),
                ('curso', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='tareas', to='cursos.curso')),
            ],
            options={
                'verbose_name': 'Tarea',
                'verbose_name_plural': 'Tareas',
                'ordering': ['fecha_limite'],
            },
        ),
        migrations.CreateModel(
            name='EntregaTarea',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('archivo', models.FileField(blank=True, upload_to='entregas/%Y/%m/')),
                ('comentario', models.TextField(blank=True, default='')),
                ('fecha_entrega', models.DateTimeField(auto_now_add=True)),
                ('estado', models.CharField(choices=[('enviado', 'Enviado'), ('calificado', 'Calificado'), ('devuelto', 'Devuelto')], default='enviado', max_length=15)),
                ('puntaje_obtenido', models.IntegerField(blank=True, null=True)),
                ('retroalimentacion', models.TextField(blank=True, default='')),
                ('fecha_calificacion', models.DateTimeField(blank=True, null=True)),
                ('calificado_por', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='entregas_calificadas', to=settings.AUTH_USER_MODEL)),
                ('estudiante', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='entregas', to=settings.AUTH_USER_MODEL)),
                ('tarea', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='entregas', to='tareas.tarea')),
            ],
            options={
                'verbose_name': 'Entrega de Tarea',
                'verbose_name_plural': 'Entregas de Tareas',
                'unique_together': {('tarea', 'estudiante')},
            },
        ),
    ]
